struttura delle bar

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
       <!-- BLOCCO HEADER -->
     <header>
       <!-- SEZIONE DELLE LOGIN_BAR & NAV_BAR -->
-      <section>
+
         <!-- LOGINBAR -->
-        <div class="nav_login">
-          <div class="lingua_nav"></div>
-          <div class="lista_login">
-            <ul>
-              <li>lente</li>
-              <li><a href="#">log In</a></li>
-              <li><a href="#">GetHubspotFree</a></li>
-            </ul>
+        <main class="center">
+          <div class="nav_login">
+            <div class="lingua_nav">
+            </div>
+            <div class="lista_login">
+              <ul>
+                <li>lente</li>
+                <li><a href="#">log In</a></li>
+                <li><a href="#">GetHubspotFree</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
         <!-- FINE DELLA LOGINBAR -->
         <!-- NAVBAR -->
         <div class="nav_bar">
@@ -36,8 +38,9 @@
             </ul>
           </div>
         </div>
+      </main>
         <!-- FINE DELLA NAVBAR -->
-      </section>
+
       <!-- fine SEZIONE DELLA LOGIN_BAR & NAV_BAR  -->
       <section>
         <div class="background_header">
