progressi con le bar

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 
         <!-- LOGINBAR -->
         <main class="center">
-          <div class="nav_login">
+          <div id="nav_login">
             <div class="lingua_nav">
+              <ul>
+                <li>input che non ricordo</li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
             </div>
             <div class="lista_login">
               <ul>
-                <li>lente</li>
+                <li><a href="#">lente</a></li>
                 <li><a href="#">log In</a></li>
                 <li><a href="#">GetHubspotFree</a></li>
               </ul>
@@ -25,16 +29,17 @@
           </div>
         <!-- FINE DELLA LOGINBAR -->
         <!-- NAVBAR -->
-        <div class="nav_bar">
+        <div id="nav_bar">
           <div class="logo_nav">
+            <img src="img/logo.svg" alt="logo">
           </div>
           <div class="lista_nav">
             <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>input</li>
+              <li><a href="#">sergio</a></li>
+              <li>input</li>
+              <li>input</li>
+              <li>input</li>
             </ul>
           </div>
         </div>
