--- a/index.html
+++ b/index.html
@@ -11,50 +11,53 @@
       <!-- SEZIONE DELLE LOGIN_BAR & NAV_BAR -->
 
         <!-- LOGINBAR -->
-        <main class="center">
-          <div id="nav_login">
-            <div class="lingua_nav">
+        <div class="center">
+            <div id="nav_login">
+              <div class="lingua_nav">
+                <ul>
+                  <li>input che non ricordo</li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+              <div class="lista_login">
+                <ul>
+                  <li><a href="#">lente</a></li>
+                  <li><a href="#">log In</a></li>
+                  <li><a href="#">GetHubspotFree</a></li>
+                </ul>
+              </div>
+            </div>
+          <!-- FINE DELLA LOGINBAR -->
+          <!-- NAVBAR -->
+          <div id="nav_bar">
+            <div class="logo_nav">
+              <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="lista_nav">
               <ul>
-                <li>input che non ricordo</li>
-                <li><a href="#">Contact Us</a></li>
+                <li>input</li>
+                <li><a href="#">sergio</a></li>
+                <li>input</li>
+                <li>input</li>
+                <li>input</li>
               </ul>
             </div>
-            <div class="lista_login">
-              <ul>
-                <li><a href="#">lente</a></li>
-                <li><a href="#">log In</a></li>
-                <li><a href="#">GetHubspotFree</a></li>
-              </ul>
-            </div>
-          </div>
-        <!-- FINE DELLA LOGINBAR -->
-        <!-- NAVBAR -->
-        <div id="nav_bar">
-          <div class="logo_nav">
-            <img src="img/logo.svg" alt="logo">
-          </div>
-          <div class="lista_nav">
-            <ul>
-              <li>input</li>
-              <li><a href="#">sergio</a></li>
-              <li>input</li>
-              <li>input</li>
-              <li>input</li>
-            </ul>
           </div>
         </div>
-      </main>
         <!-- FINE DELLA NAVBAR -->
 
-      <!-- fine SEZIONE DELLA LOGIN_BAR & NAV_BAR  -->
-      <section>
+        <!-- fine SEZIONE DELLA LOGIN_BAR & NAV_BAR  -->
+
         <div class="background_header">
-          <div class="text_back_header">
-
+          <div class="center">
+            <div class="text_back_header">
+              <h2>There's a better way to grow</h2>
+            </div>
           </div>
-
         </div>
-      </section>
+
+
+
 
 
 
