completamento background header

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         <div class="background_header">
           <div class="center">
             <div class="text_back_header">
-              <h2>There's a better way to grow</h2>
+              <h2>There's a better way to <br> grow.</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <a href="#">GetHubSpotFree</a>
+              <p>Get started whit FREE tools, and upgrade as you grow</p>
             </div>
           </div>
         </div>
