--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="lista_nav">
               <ul>
-                <li>input</li>
-                <li><a href="#">sergio</a></li>
-                <li>input</li>
-                <li>input</li>
-                <li>input</li>
+                <li>Software</li>
+                <li><a href="#">Pricing</a></li>
+                <li>Resources</li>
+                <li>Partners</li>
+                <li>About</li>
               </ul>
             </div>
           </div>
@@ -48,6 +48,7 @@
 
         <!-- fine SEZIONE DELLA LOGIN_BAR & NAV_BAR  -->
 
+        <!-- SEZIONE BACKGROUND HEADER -->
         <div class="background_header">
           <div class="center">
             <div class="text_back_header">
@@ -58,15 +59,27 @@
             </div>
           </div>
         </div>
-
-
-
-
-
-
-
-
+          <!-- FINE SEZIONE BACKGROUND HEADER -->
     </header>
+      <!-- fine BLOCCO HEADER -->
+
+      <!-- SEZIONE CENTRALE CON LE COLONNE -->
+      <main id="box_centrale" class="center">
+        <div class="prima_riga">
+          <img src="img/cube.png" alt="foto cubo">
+          <h2>Powerful Alone.Better Together</h2>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </span>
+        </div>
+
+      </main>
+
+
+
+
+
+
 
   </body>
   </html>
