progressi con parte centrale

--- a/index.html
+++ b/index.html
@@ -72,7 +72,23 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </span>
         </div>
-
+        <!-- SECONDA RIGA -->
+        <div class="seconda_riga">
+          <div class="colonna1">
+            <img src="img/libro.svg" alt="foto libro">
+            <a href="#">Learn More</a>
+          </div>
+          <div class="colonna2">
+            <h2>Free HubSpot CRM</h2>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
+            <h3>POPOLAR FEATURES </h3>
+            <ul>
+              <li>Contact Inside</li>
+              <li>Deal</li>
+              <li>Task</li>
+            </ul>
+          </div>
+        </div>
       </main>
 
 
