--- a/index.html
+++ b/index.html
@@ -12,37 +12,39 @@
 
         <!-- LOGINBAR -->
         <div class="center">
-            <div id="nav_login">
-              <div class="lingua_nav">
+            <nav>
+              <div id="nav_login">
+                <div class="lingua_nav">
+                  <ul>
+                    <li>English</li>
+                    <li><a href="#">Contact Us</a></li>
+                  </ul>
+                </div>
+                <div class="lista_login ">
+                  <ul>
+                    <li><a href="#">lente</a></li>
+                    <li><a href="#">log In</a></li>
+                    <li><a href="#">GetHubspotFree</a></li>
+                  </ul>
+                </div>
+              </div>
+              <!-- FINE DELLA LOGINBAR -->
+              <!-- NAVBAR -->
+              <div id="nav_bar">
+              <div class="logo_nav">
+                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+              </div>
+              <div class="lista_nav">
                 <ul>
-                  <li>input che non ricordo</li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li>Software</li>
+                  <li><a href="#">Pricing</a></li>
+                  <li>Resources</li>
+                  <li>Partners</li>
+                  <li>About</li>
                 </ul>
               </div>
-              <div class="lista_login">
-                <ul>
-                  <li><a href="#">lente</a></li>
-                  <li><a href="#">log In</a></li>
-                  <li><a href="#">GetHubspotFree</a></li>
-                </ul>
-              </div>
             </div>
-          <!-- FINE DELLA LOGINBAR -->
-          <!-- NAVBAR -->
-          <div id="nav_bar">
-            <div class="logo_nav">
-              <img src="img/logo.svg" alt="logo">
-            </div>
-            <div class="lista_nav">
-              <ul>
-                <li>Software</li>
-                <li><a href="#">Pricing</a></li>
-                <li>Resources</li>
-                <li>Partners</li>
-                <li>About</li>
-              </ul>
-            </div>
-          </div>
+            </nav>
         </div>
         <!-- FINE DELLA NAVBAR -->
 
@@ -64,31 +66,34 @@
       <!-- fine BLOCCO HEADER -->
 
       <!-- SEZIONE CENTRALE CON LE COLONNE -->
-      <main id="box_centrale" class="center">
-        <div class="prima_riga">
-          <img src="img/cube.png" alt="foto cubo">
-          <h2>Powerful Alone.Better Together</h2>
-          <span>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </span>
-        </div>
-        <!-- SECONDA RIGA -->
-        <div class="seconda_riga">
-          <div class="colonna1">
-            <img src="img/libro.svg" alt="foto libro">
-            <a href="#">Learn More</a>
+      <main>
+        <section id="box_centrale" class="center">
+          <!-- PRIMA RIGA -->
+          <div class="prima_riga">
+            <img src="img/cube.png" alt="foto cubo">
+            <h2>Powerful Alone.Better Together</h2>
+            <span>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </span>
           </div>
-          <div class="colonna2">
-            <h2>Free HubSpot CRM</h2>
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
-            <h3>POPOLAR FEATURES </h3>
-            <ul>
-              <li>Contact Inside</li>
-              <li>Deal</li>
-              <li>Task</li>
-            </ul>
+          <!-- SECONDA RIGA -->
+          <div class="seconda_riga">
+            <div class="colonna1">
+              <img src="img/libro.svg" alt="foto libro">
+              <a href="#">Learn More</a>
+            </div>
+            <div class="colonna2">
+              <h2>Free HubSpot CRM</h2>
+              <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
+              <h3>POPOLAR FEATURES </h3>
+              <ul>
+                <li>Contact Inside</li>
+                <li>Deal</li>
+                <li>Task</li>
+              </ul>
+            </div>
           </div>
-        </div>
+        </section>
       </main>
 
 
