inizio tre colonne

--- a/index.html
+++ b/index.html
@@ -91,7 +91,27 @@
                 <li>Deal</li>
                 <li>Task</li>
               </ul>
+
             </div>
+          </div>
+          <!-- TERZA RIGA -->
+          <div class="terza_riga">
+
+            <div class="colonna_1">
+              <img src="img/pallini.svg" alt="pic pallini">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="colonna_2">
+              <img src="img/valigia.svg" alt="pic valigia">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="colonna_3">
+              <img src="img/tavolino.svg" alt="pic tavolino">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
           </div>
         </section>
       </main>
