--- a/index.html
+++ b/index.html
@@ -99,17 +99,38 @@
 
             <div class="colonna_1">
               <img src="img/pallini.svg" alt="pic pallini">
+              <h2>Marketing Hub</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3>POPOLAR FEATURES</h3>
+              <ul>
+                <li>Lead Generation</li>
+                <li>Marketing Automation</li>
+                <li>Analytics</li>
+              </ul>
             </div>
 
             <div class="colonna_2">
               <img src="img/valigia.svg" alt="pic valigia">
+              <h2>Sales Hub</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3>POPOLAR FEATURES</h3>
+              <ul>
+                <li>Email Tracking</li>
+                <li>Meeting Scheduling</li>
+                <li>Email Atomation</li>
+              </ul>
             </div>
 
             <div class="colonna_3">
               <img src="img/tavolino.svg" alt="pic tavolino">
+              <h2>Service Hub</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3>POPOLAR FEATURES</h3>
+              <ul>
+                <li>Ticket</li>
+                <li>Customer Feedback</li>
+                <li>Knowledge Base</li>
+              </ul>
             </div>
 
           </div>
