fine 3 colonne senza icone

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <!-- TERZA RIGA -->
           <div class="terza_riga">
-
+            <!-- colonna uno -->
             <div class="colonna_1">
               <img src="img/pallini.svg" alt="pic pallini">
               <h2>Marketing Hub</h2>
@@ -107,8 +107,9 @@
                 <li>Marketing Automation</li>
                 <li>Analytics</li>
               </ul>
+              <a href="#">Learn More</a>
             </div>
-
+            <!-- colonna due -->
             <div class="colonna_2">
               <img src="img/valigia.svg" alt="pic valigia">
               <h2>Sales Hub</h2>
@@ -119,8 +120,9 @@
                 <li>Meeting Scheduling</li>
                 <li>Email Atomation</li>
               </ul>
+              <a href="#">Learn More</a>
             </div>
-
+            <!-- colonna tre -->
             <div class="colonna_3">
               <img src="img/tavolino.svg" alt="pic tavolino">
               <h2>Service Hub</h2>
@@ -131,6 +133,7 @@
                 <li>Customer Feedback</li>
                 <li>Knowledge Base</li>
               </ul>
+              <a href="#">Learn More</a>
             </div>
 
           </div>
