--- a/index.html
+++ b/index.html
@@ -135,10 +135,22 @@
               </ul>
               <a href="#">Learn More</a>
             </div>
-
           </div>
         </section>
       </main>
+
+        <section id="box_sfumatura">
+          <div class="center">
+            <div class="paragrafo">
+              <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+              <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+            </div>
+            <div class="tabella">
+
+            </div>
+          </div>
+
+        </section>
 
 
 
