--- a/index.html
+++ b/index.html
@@ -147,10 +147,59 @@
             </div>
             <div class="tabella">
 
+              <div class="col_tab1">
+                <div class="blocco1">
+                  <span>
+                    150+
+                    <br>
+                    HubSpot user groups
+                  </span>
+                </div>
+              </div>
+
+              <div class="col_tab2">
+                <div class="blocc02">
+                  <span>
+                    150+
+                    <br>
+                    HubSpot user groups
+                  </span>
+                  <span>
+                    150+
+                    <br>
+                    HubSpot user groups
+                  </span>
+                </div>
+
+
+              </div>
+
+              <div class="col_tab3">
+                <div class="blocco3">
+                  <span>
+                    150+
+                    <br>
+                    HubSpot user groups
+                  </span>
+                </div>
+              </div>
+
+              <div class="col_tab4">
+                <div class="blocco4">
+                  <span>
+                    150+
+                    <br>
+                    HubSpot user groups
+                  </span>
+                </div>
+              </div>
+
             </div>
           </div>
 
         </section>
+
+
 
 
 
