fine tabella senza icone

--- a/index.html
+++ b/index.html
@@ -148,51 +148,80 @@
             <div class="tabella">
 
               <div class="col_tab1">
-                <div class="blocco1">
-                  <span>
-                    150+
-                    <br>
-                    HubSpot user groups
-                  </span>
-                </div>
+                <span>
+                  150+
+                  <br>
+                  HubSpot user groups
+                </span>
               </div>
 
               <div class="col_tab2">
-                <div class="blocc02">
-                  <span>
-                    150+
-                    <br>
-                    HubSpot user groups
-                  </span>
-                  <span>
-                    150+
-                    <br>
-                    HubSpot user groups
-                  </span>
-                </div>
-
-
+                <span>
+                  4.5M+
+                  <br>
+                  Monthly Visit
+                </span>
               </div>
 
               <div class="col_tab3">
-                <div class="blocco3">
-                  <span>
-                    150+
-                    <br>
-                    HubSpot user groups
-                  </span>
-                </div>
+                <span>
+                  155K+
+                  <br>
+                  Certifie Professional
+                </span>
               </div>
 
               <div class="col_tab4">
-                <div class="blocco4">
-                  <span>
-                    150+
-                    <br>
-                    HubSpot user groups
-                  </span>
-                </div>
+                <span>
+                  21K+
+                  <br>
+                  Registerd Attendees
+                </span>
               </div>
+
+              <div class="col_tab5">
+                <span>
+                  200+
+                  <br>
+                  Integration
+                </span>
+              </div>
+
+              <div class="col_tab6">
+                <span>
+                  6+
+                  <br>
+                  Lenguages
+                </span>
+              </div>
+
+              <div class="col_tab7">
+                <span>
+                  2.6M
+                  <br>
+                  Social Followers
+                </span>
+              </div>
+
+              <div class="col_tab8">
+                <span>
+                  5K+
+                  <br>
+                  Profiles Counting
+                </span>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
             </div>
           </div>
