--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Hubspot</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+
   </head>
   <body>
       <!-- BLOCCO HEADER -->
@@ -139,7 +141,8 @@
         </section>
       </main>
 
-        <section id="box_sfumatura">
+        <!-- BACKROUND CON SFUMATURA -->
+      <section id="box_sfumatura">
           <div class="center">
             <div class="paragrafo">
               <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
@@ -227,6 +230,32 @@
           </div>
 
         </section>
+
+      <div id="box_sponsor">
+        <div class="center">
+          <div class="riga_sponsor">
+            <div class="numeri">
+              <h2>
+                64,500
+              </h2>
+              <p>customers in over 100 countries growing their businesses with HubSpot</p>
+            </div>
+            <div class="sponsor">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="Atlassian-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="doordash-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="g2crowd-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="Survey Monkey-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="Subaru-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="Wistia-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="Classpass-Logo">
+              <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="VMware-Logo">
+            </div>
+            <div class="start_grow">
+
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
