fine riga sponsor

--- a/index.html
+++ b/index.html
@@ -251,7 +251,12 @@
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="VMware-Logo">
             </div>
             <div class="start_grow">
-
+              <h2>Start Growing With HubSpot Today</h2>
+              <p>
+                With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.
+              </p>
+              <a href="#">GetHubspotFree</a>
+              <span>Get started with FREE tools, or get more with our premium software.</span>
             </div>
           </div>
         </div>
