--- a/index.html
+++ b/index.html
@@ -264,6 +264,61 @@
 
 
 
+      <div id="footer">
+        <div class="center">
+          <div class="riga_footer">
+
+            <div class="col_footer1">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
+
+            <div class="col_footer1">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
+            <div class="col_footer1">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
+            <div class="col_footer1">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
+
+
+          </div>
+        </div>
+
+
+      </div>
+
+
+
 
 
 
