fine pagine, senza migliorie

--- a/index.html
+++ b/index.html
@@ -279,27 +279,7 @@
               </ul>
             </div>
 
-            <div class="col_footer1">
-              <h3>Increase Your Traffic</h3>
-              <ul>
-                <li>Ad Software</li>
-                <li>Blog Software</li>
-                <li>SEO Software</li>
-                <li>Social Media Software</li>
-                <li>Content Management System</li>
-              </ul>
-            </div>
-            <div class="col_footer1">
-              <h3>Increase Your Traffic</h3>
-              <ul>
-                <li>Ad Software</li>
-                <li>Blog Software</li>
-                <li>SEO Software</li>
-                <li>Social Media Software</li>
-                <li>Content Management System</li>
-              </ul>
-            </div>
-            <div class="col_footer1">
+            <div class="col_footer2">
               <h3>Increase Your Traffic</h3>
               <ul>
                 <li>Ad Software</li>
@@ -310,8 +290,63 @@
               </ul>
             </div>
 
+            <div class="col_footer3">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+              </ul>
+            </div>
 
+            <div class="col_footer4">
+              <h3>Increase Your Traffic</h3>
+              <ul>
+                <li>Ad Software</li>
+                <li>Blog Software</li>
+                <li>SEO Software</li>
+                <li>Social Media Software</li>
+                <li>Content Management System</li>
+                <li><a href="#">Contact HubSpot Support</a></li>
+              </ul>
+            </div>
           </div>
+          <div class="riga_footer2">
+            <div class="lingue_footer">
+              <ul>
+                <li><a href="#">English</a></li>
+                <li><a href="#">Deutsch</a></li>
+                <li><a href="#">Español</a></li>
+                <li><a href="#">日本語</a></li>
+                <li><a href="#">Português</a></li>
+                <li><a href="#">Français</a></li>
+              </ul>
+            </div>
+
+            <div class="logo_footer">
+              <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="logo HubSpot">
+              <br>
+              <span>
+                Copyright © 2020 HubSpot, Inc.
+              </span>
+            </div>
+
+            <div class="legalstuff_footer">
+              <span>
+                Legal Stuff
+              </span>
+              <span>
+                Privacy Policy
+              </span>
+            </div>
+          </div>
+
+
+
+
+
         </div>
 
 
