--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
       <!-- fine BLOCCO HEADER -->
 
       <!-- SEZIONE CENTRALE CON LE COLONNE -->
-      <main>
-        <section id="box_centrale" class="center">
-          <!-- PRIMA RIGA -->
+      <section id="box_centrale" class="center">
+          <main class="center">
+            <!-- PRIMA RIGA -->
           <div class="prima_riga">
             <img src="img/cube.png" alt="foto cubo">
             <h2>Powerful Alone.Better Together</h2>
@@ -138,8 +138,8 @@
               <a href="#">Learn More</a>
             </div>
           </div>
-        </section>
-      </main>
+        </main>
+      </section>
 
         <!-- BACKROUND CON SFUMATURA -->
       <section id="box_sfumatura">
