--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="lista_login ">
                   <ul>
-                    <li><a href="#">lente</a></li>
+                    <li><a href="#"></a><i class="fas fa-search"></i></li>
                     <li><a href="#">log In</a></li>
                     <li><a href="#">GetHubspotFree</a></li>
                   </ul>
@@ -93,9 +93,9 @@
                 <li>Deal</li>
                 <li>Task</li>
               </ul>
-
             </div>
           </div>
+
           <!-- TERZA RIGA -->
           <div class="terza_riga">
             <!-- colonna uno -->
